NETWORK/CALICO/dep_svc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    name: development
    
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: development-nginx-deployment
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: development
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
      
      
---

apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    name: test
    
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx-deployment
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: test
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
